# Project: pylywsdxx-async

# Hatchling  https://packaging.python.org/en/latest/key_projects/#hatch
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylywsdxx-async"
description = "A Python3 class to interrogate Xiaomi Mijia LYWSD* sensors asynchronously."
version = "0.1.4"  # latest/current distribution version
# version = "0.0.0"  # latest test version
dependencies = [
    "bleak",
]
license = {file = "LICENSE"}
authors = [
  { name="Mausy5043" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation"
]

[project.urls]
"Homepage" = "https://github.com/Mausy5043/pylywsdxx-async"
"Bug Tracker" = "https://github.com/Mausy5043/pylywsdxx-async/issues"

[project.scripts]
discover_lywsd = 'pylywsdxx_async.discover_lywsd:main'

[tool.hatch.build]
include = [
    "pylywsdxx_async/*.py",
    "pylywsdxx_async/py.typed",
    "examples/*.py",
]

[tool.hatch.build.targets.wheel.force-include]
"./pyproject.toml" = "pylywsdxx_async/pyproject.toml"

[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 2
ignore = [
    # whitespace before ':': is enforced by black
    "E203"
    ]

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
py_version="auto"

[tool.flake8]
max_line_length = 98
ignore = [
    # function too complex: is what we do ;-)
    "C901",
    # whitespace before ':': is enforced by black
    "E203",
    # line too long: is checked by pylint
    "E501",
    # do not use bare 'except':  don't care
    "E722",
    # line break before binary: is against policy.
    "W503",
    ]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
no_implicit_reexport = true
extra_checks = true

[tool.pydocstyle]
inherit = false
convention = "google"
match = ".*\\.py"
add-ignore = "D"

[tool.ruff]
fix = true
indent-width = 4
line-length = 98
output-format = "concise"
include = ["pyproject.toml", "pylywsdxx_async/**/*.py", "examples/**/*.py",]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "preserve"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP", "W"]
ignore = [
    # line too long: formatter is leading
    "E501"
    ]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# pylint is controlled by .pylintrc
